[gd_scene load_steps=8 format=3 uid="uid://b1i1ky18bbaqf"]

[ext_resource type="Theme" uid="uid://03nuasohg4fh" path="res://resources/themes/main/main_theme.tres" id="1_rsj42"]
[ext_resource type="Script" path="res://ui/tabs/tab_debug/tab_debug.gd" id="2_oqyqe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jh3g"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.901961)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_01cx6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dl311"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_extcm"]
bg_color = Color(0.105882, 0.113725, 0.121569, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="ButtonGroup" id="ButtonGroup_6y5qp"]

[node name="TabDebug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rsj42")
script = ExtResource("2_oqyqe")

[node name="HBoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8jh3g")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OutputText" type="RichTextLabel" parent="HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_01cx6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dl311")
autowrap_mode = 0
context_menu_enabled = true
threaded = true
selection_enabled = true
deselect_on_focus_loss_enabled = false

[node name="FilterLineEdit" type="LineEdit" parent="HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
placeholder_text = "filter..."

[node name="VBoxContainer" type="BoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/BoxContainer"]
visible = false
layout_mode = 2
text = "Level:"
horizontal_alignment = 1

[node name="C" type="PanelContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/BoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_extcm")

[node name="C" type="BoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/BoxContainer/C"]
layout_mode = 2

[node name="DebugButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/BoxContainer/C/C"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6y5qp")
text = "DEBUG"

[node name="InfoButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/BoxContainer/C/C"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6y5qp")
text = "INFO"

[node name="WarningButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/BoxContainer/C/C"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_6y5qp")
text = "WARNING"

[node name="ErrorButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/BoxContainer/C/C"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6y5qp")
text = "ERROR"

[node name="WrapButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
text = "Wrap Text"

[node name="AutoButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
text = "Auto Scroll"

[node name="ClearButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "
"
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.737255, 0.745098, 0.760784, 1)
text = "Clear"
